@@ -27,7 +27,30 @@ RELEASE 0.97.0d20071212 - Wed, 12 Dec 2007 09:29:32 -0600
 
   Please note the following important changes since release 0.97.0d20071212:
 
+    --  SCONS NOW WARNS ABOUT DEPRECATED SUPPORT FOR PYTHON 1.5, 2.0 AND 2.1
+
+        SCons now prints the following warning when it is run by any
+        Python 1.5, 2.0 or 2.1 release or sub-release:
+
+            scons: warning: Support for Python version $PYTHON_VERSION will be deprecated in a future release.
+
+        This warning may be disabled by adding the following to any
+        SConscript file:
+
+            SetOption('warn', 'no-python-version')
+
+        The warning may also be suppressed on the command line:
+
+            $ scons --warn=no-python-version
+
+        Or by specifying the above option in the $SCONSFLAGS environment
+        variable.
+
+        The above techniques for suppressing the warning are *not*
+        backwards-compatible to earlier versions of SCons.
+
     --  File(), Dir() and Entry() NOW RETURN A LIST WHEN THE INPUT IS A SEQUENCE
+
         Previously, if these methods were passed a list, the list was
 	substituted and stringified, then passed as a single string to
 	create a File/Dir/Entry Node.  This rarely if ever worked with
@@ -46,12 +69,12 @@ RELEASE 0.97.0d20071212 - Wed, 12 Dec 2007 09:29:32 -0600
         expanded when given a list as input.  Previously, the env.subst()
         method would always turn its result into a string.
 
-        This behavior was changed because way it interfered with
-        being able to include things like lists within the expansion
-        of variables like $CPPPATH and have SCons understand that the
-        elements of the "internal" lists still needed to be treated
-        separately.  This would show up as a list like ['subdir1',
-        'subdir'] showing up in a command line as "-Isubdir1 subdir".
+        This behavior was changed because it interfered with being able
+        to include things like lists within the expansion of variables
+        like $CPPPATH and then have SCons understand that the elements
+        of the "internal" lists still needed to be treated separately.
+        This would cause a $CPPPATH list like ['subdir1', 'subdir']
+        to show up in a command line as "-Isubdir1 subdir".
 
     --  THE Jar() BUILDER NOW USES THE Java() BUILDER CLASSDIR BY DEFAULT
 
