@@ -404,6 +404,13 @@ class TreePrinter:
         SCons.Util.print_tree(t, func, prune=self.prune, showtags=s)
 
 
+def python_version_unsupported(version):
+    return version[:3] in ()
+
+def python_version_deprecated(version):
+    return version[:3] in ('1.5', '2.0', '2.1')
+
+
 # Global variables
 
 print_objects = 0
@@ -578,7 +585,7 @@ def _scons_internal_error():
     traceback.print_exc()
     sys.exit(2)
 
-def _setup_warn(arg):
+def _setup_warn(arguments):
     """The --warn option.  An argument to this option
     should be of the form <warning-class> or no-<warning-class>.
     The warning class is munged in order to get an actual class
@@ -598,30 +605,33 @@ def _setup_warn(arg):
     will enable or disable (respectively) the base
     class of all warnings, which is SCons.Warning.Warning."""
 
-    elems = string.split(string.lower(arg), '-')
-    enable = 1
-    if elems[0] == 'no':
-        enable = 0
-        del elems[0]
-
-    if len(elems) == 1 and elems[0] == 'all':
-        class_name = "Warning"
-    else:
-        def _capitalize(s):
-            if s[:5] == "scons":
-                return "SCons" + s[5:]
-            else:
-                return string.capitalize(s)
-        class_name = string.join(map(_capitalize, elems), '') + "Warning"
-    try:
-        clazz = getattr(SCons.Warnings, class_name)
-    except AttributeError:
-        sys.stderr.write("No warning type: '%s'\n" % arg)
-    else:
-        if enable:
-            SCons.Warnings.enableWarningClass(clazz)
+    def _capitalize(s):
+        if s[:5] == "scons":
+            return "SCons" + s[5:]
         else:
-            SCons.Warnings.suppressWarningClass(clazz)
+            return string.capitalize(s)
+
+    for arg in arguments:
+
+        elems = string.split(string.lower(arg), '-')
+        enable = 1
+        if elems[0] == 'no':
+            enable = 0
+            del elems[0]
+
+        if len(elems) == 1 and elems[0] == 'all':
+            class_name = "Warning"
+        else:
+            class_name = string.join(map(_capitalize, elems), '') + "Warning"
+        try:
+            clazz = getattr(SCons.Warnings, class_name)
+        except AttributeError:
+            sys.stderr.write("No warning type: '%s'\n" % arg)
+        else:
+            if enable:
+                SCons.Warnings.enableWarningClass(clazz)
+            else:
+                SCons.Warnings.suppressWarningClass(clazz)
 
 def _SConstruct_exists(dirname='', repositories=[]):
     """This function checks that an SConstruct file exists in a directory.
@@ -762,12 +772,12 @@ def _main(parser):
                          SCons.Warnings.NoObjectCountWarning,
                          SCons.Warnings.NoParallelSupportWarning,
                          SCons.Warnings.MisleadingKeywordsWarning,
+                         SCons.Warnings.PythonVersionWarning,
                          SCons.Warnings.StackSizeWarning, ]
     for warning in default_warnings:
         SCons.Warnings.enableWarningClass(warning)
     SCons.Warnings._warningOut = _scons_internal_warning
-    if options.warn:
-        _setup_warn(options.warn)
+    _setup_warn(options.warn)
 
     # Now that we have the warnings configuration set up, we can actually
     # issue (or suppress) any warnings about warning-worthy things that
@@ -926,6 +936,19 @@ def _main(parser):
 
     memory_stats.append('after reading SConscript files:')
     count_stats.append(('post-', 'read'))
+
+    # Re-{enable,disable} warnings in case they disabled some in
+    # the SConscript file.
+    _setup_warn(options.warn)
+
+    # Now that we've read the SConscript files, we can check for the
+    # warning about deprecated Python versions--delayed until here
+    # in case they disabled the warning in the SConscript files.
+    python_version = string.split(sys.version)[0]
+    if python_version_deprecated(python_version):
+        msg = "Support for Python version %s will be deprecated in a future release."
+        SCons.Warnings.warn(SCons.Warnings.PythonVersionWarning,
+                            msg % python_version)
 
     if not options.help:
         SCons.SConf.CreateConfigHBuilder(SCons.Defaults.DefaultEnvironment())
@@ -1214,6 +1237,16 @@ def main():
     global OptionsParser
     global exit_status
     global first_command_start
+
+    # Check up front for a Python version we do not support.  We
+    # delay the check for deprecated Python versions until later,
+    # after the SConscript files have been read, in case they
+    # disable that warning.
+    python_version = string.split(sys.version)[0]
+    if python_version_unsupported(python_version):
+        msg = "scons: *** SCons version %s does not run under Python version %s.\n"
+        sys.stderr.write(msg % (SCons.__version__, python_version))
+        sys.exit(1)
 
     parts = ["SCons by Steven Knight et al.:\n"]
     try:
